--- a/gemfile
+++ b/gemfile
@@ -4,3 +4,4 @@ gem 'cucumber', '~> 7.1'
 gem 'selenium-webdriver', '~> 4.1'
 gem 'rspec-expectations', '~> 3.11'
 gem 'page-object', '~> 2.3', '>= 2.3.1'
+gem 'yaml', '~> 0.2.0'
